--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ All rights reserved
  
 <hr />
 <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://eegiievol.github.io/w1d2recipe">
-<img src="resources/w3c-html.png" alt="w3c">
+<img src="recipeImages/w3c-html.png" alt="w3c">
 </a>
-<a href="https://jigsaw.w3.org/css-validator/validator?uri=https://eegiievol.github.io/w1d2recipe/styles.css">
-<img src="resources/w3c-css.png" alt="w3c">
+<a href="https://jigsaw.w3.org/css-validator/validator?uri=https://eegiievol.github.io/w1d2recipe">
+<img src="recipeImages/w3c-css.png" alt="w3c">
 </a>
 
 </body>
